add: enable bills

--- a/src/app/content/guides/index.yaml
+++ b/src/app/content/guides/index.yaml
@@ -1,24 +1,24 @@
 - title: "¿Cómo tramitar la patente de vehículos?"
-  publishedAt: "2023-01-15"
-  summary: "A beginner's guide to Python programming basics"
+  publishedAt: "2023-05-22"
+  summary: "Guía completa para el trámite de patente vehicular"
   url: "/documents/guides/example1.pdf"
 
 - title: "¿Cómo tramitar la licencia de licores?"
-  publishedAt: "2023-02-20"
-  summary: "Learn advanced React component patterns and best practices"
+  publishedAt: "2023-04-05"
+  summary: "Procedimiento para obtener licencia de venta de licores"
   url: "/documents/guides/example2.pdf"
 
 - title: "¿Cómo tramitar el permiso de enterramiento?"
   publishedAt: "2023-03-10"
-  summary: "Introduction to DevOps principles and CI/CD pipelines"
+  summary: "Requisitos y pasos para permisos de enterramiento"
   url: "/documents/guides/example3.pdf"
 
 - title: "¿Cómo tramitar la licencia de actividad económica?"
-  publishedAt: "2023-04-05"
-  summary: "Overview of key machine learning algorithms and concepts"
+  publishedAt: "2023-02-20"
+  summary: "Guía para obtener licencia de actividad comercial"
   url: "/documents/guides/example4.pdf"
 
-- title: "Secure Coding Practices"
-  publishedAt: "2023-05-22"
-  summary: "Essential security practices for writing robust code"
+- title: "¿Cómo tramitar el registro de propiedad?"
+  publishedAt: "2023-01-15"
+  summary: "Proceso completo para registro de propiedades"
   url: "/documents/guides/example5.pdf"
