content: add bills files and data to index

--- a/src/app/content/bills/index.yaml
+++ b/src/app/content/bills/index.yaml
@@ -1,24 +1,24 @@
 - title: "Reforma de la Ordenanza de Impuestos Sobre Actividades Económicas en el Municipio Zamora del Estado Falcón"
   publishedAt: "2023-12-08"
-  summary: "Guía completa para el trámite de patente vehicular"
-  url: "/documents/bills/example1.pdf"
-
-- title: "Ordenanza de Impuestos Sobre Inmuebles Urbanos"
-  publishedAt: "2023-12-01"
-  summary: "Procedimiento para obtener licencia de venta de licores"
-  url: "/documents/bills/example2.pdf"
+  summary: "Esta reforma actualiza los impuestos aplicables a las actividades económicas en el Municipio Zamora, ajustando las tarifas y categorías para mejorar la recaudación fiscal y promover un sistema más equitativo para comercios, industrias y servicios."
+  url: "/documents/bills/ordenanza_actividad_economica_2024.pdf"
 
 - title: "Reforma Parcial De La Ordenanza De Impuestos Sobre Vehículos, En El Municipio Zamora, Del Estado Falcón"
   publishedAt: "2023-11-28"
-  summary: "Requisitos y pasos para permisos de enterramiento"
-  url: "/documents/bills/example3.pdf"
+  summary: "La reforma modifica los gravámenes aplicables a la tenencia y circulación de vehículos en el municipio, introduciendo ajustes en las tarifas según tipo, antigüedad y uso, con el objetivo de modernizar el sistema impositivo vehicular."
+  url: "/documents/bills/ordenanza_vehiculos_2024.pdf"
 
 - title: "Reforma De La Ordenanza Sobre Tasas De Autorizaciones Para El Expendio De Bebidas Alcohólicas En El Municipio Zamora Del Estado Falcón"
-  publishedAt: "2023-11-01"
-  summary: "Guía para obtener licencia de actividad comercial"
-  url: "/documents/bills/example4.pdf"
+  publishedAt: "2023-11-27"
+  summary: "Esta reforma actualiza las tasas y requisitos para la obtención de permisos de venta de bebidas alcohólicas, buscando un equilibrio entre el control administrativo y el fomento de un comercio regulado y responsable."
+  url: "/documents/bills/ordenanza_licores_2024.pdf"
 
-- title: "¿Cómo tramitar el registro de propiedad?"
-  publishedAt: "2023-01-15"
-  summary: "Proceso completo para registro de propiedades"
-  url: "/documents/bills/example5.pdf"
+# - title: "¿Cómo tramitar el registro de propiedad?"
+#   publishedAt: "2023-01-15"
+#   summary: "Proceso completo para registro de propiedades"
+#   url: "/documents/bills/example5.pdf"
+
+# - title: "Ordenanza de Impuestos Sobre Inmuebles Urbanos"
+#   publishedAt: "2023-12-01"
+#   summary: "Procedimiento para obtener licencia de venta de licores"
+#   url: "/documents/bills/example2.pdf"
