content: add guide for vehicles patents

--- a/src/app/content/guides/index.yaml
+++ b/src/app/content/guides/index.yaml
@@ -1,24 +1,24 @@
 - title: "¿Cómo tramitar la patente de vehículos?"
-  publishedAt: "2023-05-22"
+  publishedAt: "2025-01-10"
   summary: "Guía completa para el trámite de patente vehicular"
-  url: "/documents/guides/example1.pdf"
+  url: "/documents/guides/tramite_patentes_de_vehiculos_guia_.pdf"
 
-- title: "¿Cómo tramitar la licencia de licores?"
-  publishedAt: "2023-04-05"
-  summary: "Procedimiento para obtener licencia de venta de licores"
-  url: "/documents/guides/example2.pdf"
+# - title: "¿Cómo tramitar la licencia de licores?"
+#   publishedAt: "2023-04-05"
+#   summary: "Procedimiento para obtener licencia de venta de licores"
+#   url: "/documents/guides/example2.pdf"
 
-- title: "¿Cómo tramitar el permiso de enterramiento?"
-  publishedAt: "2023-03-10"
-  summary: "Requisitos y pasos para permisos de enterramiento"
-  url: "/documents/guides/example3.pdf"
+# - title: "¿Cómo tramitar el permiso de enterramiento?"
+#   publishedAt: "2023-03-10"
+#   summary: "Requisitos y pasos para permisos de enterramiento"
+#   url: "/documents/guides/example3.pdf"
 
-- title: "¿Cómo tramitar la licencia de actividad económica?"
-  publishedAt: "2023-02-20"
-  summary: "Guía para obtener licencia de actividad comercial"
-  url: "/documents/guides/example4.pdf"
+# - title: "¿Cómo tramitar la licencia de actividad económica?"
+#   publishedAt: "2023-02-20"
+#   summary: "Guía para obtener licencia de actividad comercial"
+#   url: "/documents/guides/example4.pdf"
 
-- title: "¿Cómo tramitar el registro de propiedad?"
-  publishedAt: "2023-01-15"
-  summary: "Proceso completo para registro de propiedades"
-  url: "/documents/guides/example5.pdf"
+# - title: "¿Cómo tramitar el registro de propiedad?"
+#   publishedAt: "2023-01-15"
+#   summary: "Proceso completo para registro de propiedades"
+#   url: "/documents/guides/example5.pdf"
