--- a/src/app/content/guides/index.yaml
+++ b/src/app/content/guides/index.yaml
@@ -3,10 +3,22 @@
   summary: "Guía completa para el trámite de patente vehicular"
   url: "/documents/guides/tramite_patentes_de_vehiculos_guia_.pdf"
 
-# - title: "¿Cómo tramitar la licencia de licores?"
-#   publishedAt: "2023-04-05"
-#   summary: "Procedimiento para obtener licencia de venta de licores"
-#   url: "/documents/guides/example2.pdf"
+- title: "Tabla de precios, patentes de vehículos"
+  publishedAt: "2025-01-10"
+  summary: "Tabla de precios a pagar por la patente de vehículos"
+  url: "/documents/guides/tabla_precios_patentes_vehiculos.pdf"
+
+- title: "¿Cómo tramitar la licencia de actividad económica?"
+  publishedAt: "2025-01-20"
+  summary: "Guía para obtener licencia de actividad económica"
+  url: "/documents/guides/tramite_licencia_actividad_economica.pdf"
+
+  
+
+- title: "¿Cómo tramitar la licencia de licores?"
+  publishedAt: "2025-01-30"
+  summary: "Guía para tramitar la licencia de venta de licores"
+  url: "/documents/guides/tramite_licencia_licores.pdf"
 
 # - title: "¿Cómo tramitar el permiso de enterramiento?"
 #   publishedAt: "2023-03-10"
