content: add new bills and modify footer

--- a/src/app/content/bills/index.yaml
+++ b/src/app/content/bills/index.yaml
@@ -13,6 +13,12 @@
   summary: "Esta reforma actualiza las tasas y requisitos para la obtención de permisos de venta de bebidas alcohólicas, buscando un equilibrio entre el control administrativo y el fomento de un comercio regulado y responsable."
   url: "/documents/bills/ordenanza_licores_2024.pdf"
 
+- title: "Reforma De La Ordenanza De Propaganda Y Publicidad Comercial Del Municipio Zamora Estado Falcón"
+  publishedAt: "2025-03-31"
+  summary: "Esta reforma actualiza las tasas y requisitos necesarios para poder mostrar afiches, pancartas, marquesas y otros medios publicitarios."
+  url: "/documents/bills/ordenanza_publicidad_propaganda.pdf"
+
+
 # - title: "¿Cómo tramitar el registro de propiedad?"
 #   publishedAt: "2023-01-15"
 #   summary: "Proceso completo para registro de propiedades"
