--- a/src/app/content/guides/index.yaml
+++ b/src/app/content/guides/index.yaml
@@ -1,6 +1,6 @@
 - title: "¿Cómo tramitar la patente de vehículos?"
   publishedAt: "2025-01-10"
-  summary: "Guía completa para el trámite de patente vehicular"
+  summary: "Requisitos y pasos para trámite la patente de vehículos"
   url: "/documents/guides/tramite_patentes_de_vehiculos_guia_.pdf"
 
 - title: "Tabla de precios, patentes de vehículos"
@@ -10,20 +10,18 @@
 
 - title: "¿Cómo tramitar la licencia de actividad económica?"
   publishedAt: "2025-01-20"
-  summary: "Guía para obtener licencia de actividad económica"
+  summary: "Requisitos y pasos para tramitar la licencia de actividad económica"
   url: "/documents/guides/tramite_licencia_actividad_economica.pdf"
-
-  
 
 - title: "¿Cómo tramitar la licencia de licores?"
   publishedAt: "2025-01-30"
-  summary: "Guía para tramitar la licencia de venta de licores"
+  summary: "Requisitos y pasos para tramitar la licencia de venta de licores"
   url: "/documents/guides/tramite_licencia_licores.pdf"
 
-# - title: "¿Cómo tramitar el permiso de enterramiento?"
-#   publishedAt: "2023-03-10"
-#   summary: "Requisitos y pasos para permisos de enterramiento"
-#   url: "/documents/guides/example3.pdf"
+- title: "¿Cómo tramitar el permiso de enterramiento?"
+  publishedAt: "2025-02-10"
+  summary: "Requisitos y pasos para tramitar el permisos de enterramiento"
+  url: "/documents/guides/tramite_permiso_enterramiento.pdf"
 
 # - title: "¿Cómo tramitar la licencia de actividad económica?"
 #   publishedAt: "2023-02-20"
