content: add guides to instagram

--- a/src/app/content/guides/index.yaml
+++ b/src/app/content/guides/index.yaml
@@ -1,27 +1,37 @@
 - title: "¿Cómo tramitar la patente de vehículos?"
   publishedAt: "2025-01-10"
   summary: "Requisitos y pasos para trámite la patente de vehículos"
-  url: "/documents/guides/tramite_patentes_de_vehiculos_guia_.pdf"
+  url: "https://www.instagram.com/p/DFXxCtBuqum/?igsh=bXJmaXhocm9hcWps"
 
 - title: "Tabla de precios, patentes de vehículos"
   publishedAt: "2025-01-10"
   summary: "Tabla de precios a pagar por la patente de vehículos"
-  url: "/documents/guides/tabla_precios_patentes_vehiculos.pdf"
+  url: "https://www.instagram.com/p/DFxwS1uuzdH/?igsh=YmZxeTJodGN2NTBp"
 
 - title: "¿Cómo tramitar la licencia de actividad económica?"
   publishedAt: "2025-01-20"
   summary: "Requisitos y pasos para tramitar la licencia de actividad económica"
-  url: "/documents/guides/tramite_licencia_actividad_economica.pdf"
+  url: "https://www.instagram.com/p/DGEDaWYuhyI/?igsh=NXNiajlvaWE1Mzlh"
 
-- title: "¿Cómo tramitar la licencia de licores?"
+- title: "¿Cómo tramitar la licencia de licores? - Procedimiento"
   publishedAt: "2025-01-30"
   summary: "Requisitos y pasos para tramitar la licencia de venta de licores"
-  url: "/documents/guides/tramite_licencia_licores.pdf"
+  url: "https://www.instagram.com/p/DHMPJv_SncB/?igsh=MW92dXdjZGZpdDA3aQ=="
+
+- title: "¿Cómo tramitar la licencia de licores? - Requisitos"
+  publishedAt: "2025-01-30"
+  summary: "Requisitos y pasos para tramitar la licencia de venta de licores"
+  url: "https://www.instagram.com/p/DG6XHkrSkHW/?igsh=Z2w0a2V6dWtsN3Z1"
 
 - title: "¿Cómo tramitar el permiso de enterramiento?"
   publishedAt: "2025-02-10"
   summary: "Requisitos y pasos para tramitar el permisos de enterramiento"
-  url: "/documents/guides/tramite_permiso_enterramiento.pdf"
+  url: "https://www.instagram.com/p/DGTi7gaxlfL/?igsh=MWtya3FubGE5N29pdA=="
+
+- title: "¿Cómo tramitar la solvencia de propiedad inmobiliaria?"
+  publishedAt: "2025-02-20"
+  summary: "Requisitos y procedimiento la solvencia de propiedad inmobiliaria"
+  url: "https://www.instagram.com/p/DHd79OVRps4/?igsh=bDA3MG0yNHVmd3B1"
 
 # - title: "¿Cómo tramitar la licencia de actividad económica?"
 #   publishedAt: "2023-02-20"
