--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# CUSTOM
+
+**/nextImageExportOptimizer/
+public/images/next-image-export-optimizer-hashes.json
