feat: delete documents and add pinned styles to guides and bills

--- a/src/app/content/bills/index.yaml
+++ b/src/app/content/bills/index.yaml
@@ -1,23 +1,30 @@
 - title: "Reforma de la Ordenanza de Impuestos Sobre Actividades Económicas en el Municipio Zamora del Estado Falcón"
   publishedAt: "2023-12-08"
   summary: "Esta reforma actualiza los impuestos aplicables a las actividades económicas en el Municipio Zamora, ajustando las tarifas y categorías para mejorar la recaudación fiscal y promover un sistema más equitativo para comercios, industrias y servicios."
-  url: "/documents/bills/ordenanza_actividad_economica_2024.pdf"
+  url: "https://drive.google.com/file/d/1OVT_OgjbM0i8IeHEt4Nzi0kO9PDfTiuR/view?usp=sharing"
+  isPinned: true
 
 - title: "Reforma Parcial De La Ordenanza De Impuestos Sobre Vehículos, En El Municipio Zamora, Del Estado Falcón"
   publishedAt: "2023-11-28"
   summary: "La reforma modifica los gravámenes aplicables a la tenencia y circulación de vehículos en el municipio, introduciendo ajustes en las tarifas según tipo, antigüedad y uso, con el objetivo de modernizar el sistema impositivo vehicular."
-  url: "/documents/bills/ordenanza_vehiculos_2024.pdf"
+  url: "https://drive.google.com/file/d/17PwfmWkNdfGbokwa0SwRe0jhWbFu90b6/view?usp=sharing"
 
 - title: "Reforma De La Ordenanza Sobre Tasas De Autorizaciones Para El Expendio De Bebidas Alcohólicas En El Municipio Zamora Del Estado Falcón"
   publishedAt: "2023-11-27"
   summary: "Esta reforma actualiza las tasas y requisitos para la obtención de permisos de venta de bebidas alcohólicas, buscando un equilibrio entre el control administrativo y el fomento de un comercio regulado y responsable."
-  url: "/documents/bills/ordenanza_licores_2024.pdf"
+  url: "https://drive.google.com/file/d/1gGNTQvjdX37SuuUhLavk8VrMdqsq6cr7/view?usp=sharing"
+  isPinned: true
 
+- title: "Reforma De La Ordenanza Sobre El Servicio De Aseo Urbano Y Extraurbano Domiciliario Del Municipio Zamora Del Estado Falcón"
+  publishedAt: "2024-08-30"
+  summary: "Esta reforma actualiza las tasas y requisitos que rigen el cobro de los impuestos referentes a aseo urbano y extraurbano."
+  url: "https://drive.google.com/file/d/1z0Df23NY11hjla2dRCf6ibe0pBpMBlM-/view?usp=sharing"
+  
 - title: "Reforma De La Ordenanza De Propaganda Y Publicidad Comercial Del Municipio Zamora Estado Falcón"
   publishedAt: "2025-03-31"
   summary: "Esta reforma actualiza las tasas y requisitos necesarios para poder mostrar afiches, pancartas, marquesas y otros medios publicitarios."
-  url: "/documents/bills/ordenanza_publicidad_propaganda.pdf"
-
+  url: "https://drive.google.com/file/d/1WDpfm59Eh5OUSx33_GcjIZAGTZOBoQ9-/view?usp=sharing"
+  isPinned: true
 
 # - title: "¿Cómo tramitar el registro de propiedad?"
 #   publishedAt: "2023-01-15"
