--- a/src/app/content/guides/index.yaml
+++ b/src/app/content/guides/index.yaml
@@ -2,16 +2,19 @@
   publishedAt: "2025-01-10"
   summary: "Requisitos y pasos para trámite la patente de vehículos"
   url: "https://www.instagram.com/p/DFXxCtBuqum/?igsh=bXJmaXhocm9hcWps"
+  isPinned: true
 
 - title: "Tabla de precios, patentes de vehículos"
   publishedAt: "2025-01-10"
   summary: "Tabla de precios a pagar por la patente de vehículos"
   url: "https://www.instagram.com/p/DFxwS1uuzdH/?igsh=YmZxeTJodGN2NTBp"
+  isPinned: true
 
 - title: "¿Cómo tramitar la licencia de actividad económica?"
   publishedAt: "2025-01-20"
   summary: "Requisitos y pasos para tramitar la licencia de actividad económica"
   url: "https://www.instagram.com/p/DGEDaWYuhyI/?igsh=NXNiajlvaWE1Mzlh"
+  isPinned: true
 
 - title: "¿Cómo tramitar la licencia de licores? - Procedimiento"
   publishedAt: "2025-01-30"
