content: add new urban bill

--- a/src/app/content/bills/index.yaml
+++ b/src/app/content/bills/index.yaml
@@ -26,6 +26,11 @@
   url: "https://drive.google.com/file/d/1WDpfm59Eh5OUSx33_GcjIZAGTZOBoQ9-/view?usp=sharing"
   isPinned: true
 
+- title: "Reforma Total de la Ordenanza de Impuestos Sobre Inmuebles Urbanos del Municipio Zamora del Estado Falcón"
+  publishedAt: "2023-11-29"
+  summary: "Esta ordenanza establece el impuesto  a la propiedad de inmueble en el Municipio Zamora, Estado Falcón, Venezuela, detallando las tasas impositivas según el tipo de inmueble, zonificación y uso, junto con exenciones, sanciones y procedimientos administrativos para su cumplimiento y ejecución."
+  url: "https://drive.google.com/file/d/1rRd5Mo0IaN8L90zZjvVJ4oTgtj7b-eX7/view?usp=sharing"
+
 # - title: "¿Cómo tramitar el registro de propiedad?"
 #   publishedAt: "2023-01-15"
 #   summary: "Proceso completo para registro de propiedades"
