content: update title and add new bill

--- a/src/app/content/bills/index.yaml
+++ b/src/app/content/bills/index.yaml
@@ -26,10 +26,15 @@
   url: "https://drive.google.com/file/d/1WDpfm59Eh5OUSx33_GcjIZAGTZOBoQ9-/view?usp=sharing"
   isPinned: true
 
-- title: "Reforma Total de la Ordenanza de Impuestos Sobre Inmuebles Urbanos del Municipio Zamora del Estado Falcón"
+- title: "Reforma Total De la Ordenanza De Impuestos Sobre Inmuebles Urbanos Del Municipio Zamora Del Estado Falcón"
   publishedAt: "2023-11-29"
   summary: "Esta ordenanza establece el impuesto  a la propiedad de inmueble en el Municipio Zamora, Estado Falcón, Venezuela, detallando las tasas impositivas según el tipo de inmueble, zonificación y uso, junto con exenciones, sanciones y procedimientos administrativos para su cumplimiento y ejecución."
   url: "https://drive.google.com/file/d/1rRd5Mo0IaN8L90zZjvVJ4oTgtj7b-eX7/view?usp=sharing"
+
+- title: "Ley Orgnánica De Coordinación Y Armonización De Las Potestades Tributarias De Los Estados Y Municipios"
+  publishedAt: "2023-08-10"
+  summary: "Esta Ley tiene por objeto garantizar la coordinación y armonización de las potestades tributarias que corresponden a los estados y municipios, estableciendo los principios, parámetros, limitaciones, tipos impositivos y alícuotas aplicables, de conformidad con lo establecido en la Constitución de la República Bolivariana de Venezue."
+  url: "https://drive.google.com/file/d/1gKN8uCONB0UjxlavHKyK6rPQmcnFGUSE/view?usp=sharing"
 
 # - title: "¿Cómo tramitar el registro de propiedad?"
 #   publishedAt: "2023-01-15"
